--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21646,6 +21646,10 @@ video {
   color: #9dd85c;
 }
 
+html, body {
+  height: 100%;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
